<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:stretchColumns="1">

        <TableRow>

            <TextView
                android:gravity="right"
                android:padding="6dip"
                android:text="@string/name"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/name_field"
                android:padding="6dip"
                android:textSize="25sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:gravity="right"
                android:padding="6dip"
                android:text="@string/job"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/job_field"
                android:padding="6dip"
                android:textSize="25sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:gravity="right"
                android:padding="6dip"
                android:text="@string/age"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/age_field"
                android:padding="6dip"
                android:textSize="25sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:gravity="right"
                android:padding="6dip"
                android:text="@string/salary"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/salary_field"
                android:padding="6dip"
                android:textSize="25sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:gravity="right"
                android:padding="6dip"
                android:text="@string/senior"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/senior_field"
                android:padding="6dip"
                android:textSize="25sp" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>